[package]
name = "ywt"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
anyhow = "1.0.97"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.7"
fast_chemail = "0.9.6"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
lettre = "0.11.15"
log = "0.4.26"
mongodb = "3.2.3"
rand = "0.9.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.2"
